epp2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2025-07-02T18:07:35Z"
  generateName: original-llm-d-modelservice-epp-778c7d594f-
  labels:
    llm-d.ai/epp: original-llm-d-modelservice-epp
    pod-template-hash: 778c7d594f
  name: original-llm-d-modelservice-epp-778c7d594f-jrzxc
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: original-llm-d-modelservice-epp-778c7d594f
    uid: c8dbacbe-1e3a-4509-8a29-bb879c649690
  resourceVersion: "686130"
  uid: d6dd7eb0-9958-429c-abcf-4bb63a7f8151
spec:
  containers:
  - args:
    - --poolName
    - original-llm-d-modelservice-inference-pool
    - --poolNamespace
    - default
    - -v
    - "6"
    - --zap-encoder
    - json
    - --grpcPort
    - "9002"
    - --grpcHealthPort
    - "9003"
    env:
    - name: ENABLE_KVCACHE_AWARE_SCORER
      value: "false"
    - name: ENABLE_LOAD_AWARE_SCORER
      value: "true"
    - name: ENABLE_PREFIX_AWARE_SCORER
      value: "true"
    - name: ENABLE_SESSION_AWARE_SCORER
      value: "false"
    - name: KVCACHE_AWARE_SCORER_WEIGHT
      value: "1"
    - name: KVCACHE_INDEXER_REDIS_ADDR
    - name: LOAD_AWARE_SCORER_WEIGHT
      value: "1"
    - name: PD_ENABLED
      value: "false"
    - name: PD_PROMPT_LEN_THRESHOLD
      value: "10"
    - name: PREFILL_ENABLE_KVCACHE_AWARE_SCORER
      value: "false"
    - name: PREFILL_ENABLE_LOAD_AWARE_SCORER
      value: "false"
    - name: PREFILL_ENABLE_PREFIX_AWARE_SCORER
      value: "false"
    - name: PREFILL_ENABLE_SESSION_AWARE_SCORER
      value: "false"
    - name: PREFILL_KVCACHE_AWARE_SCORER_WEIGHT
      value: "1"
    - name: PREFILL_KVCACHE_INDEXER_REDIS_ADDR
    - name: PREFILL_LOAD_AWARE_SCORER_WEIGHT
      value: "1"
    - name: PREFILL_PREFIX_AWARE_SCORER_WEIGHT
      value: "1"
    - name: PREFILL_SESSION_AWARE_SCORER_WEIGHT
      value: "1"
    - name: PREFIX_AWARE_SCORER_WEIGHT
      value: "2"
    - name: SESSION_AWARE_SCORER_WEIGHT
      value: "1"
    image: ghcr.io/llm-d/llm-d-inference-scheduler:0.0.3
    imagePullPolicy: Always
    name: epp
    ports:
    - containerPort: 9002
      name: grpc
      protocol: TCP
    - containerPort: 9003
      name: grpc-health
      protocol: TCP
    - containerPort: 9090
      name: metrics
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-mzjw5
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: kind-control-plane
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: original-llm-d-modelservice-epp-sa
  serviceAccountName: original-llm-d-modelservice-epp-sa
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-mzjw5
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-07-02T18:07:37Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2025-07-02T18:07:35Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2025-07-02T18:07:37Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2025-07-02T18:07:37Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2025-07-02T18:07:35Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://051cf63692e0083dc88747128e07f11a69bb3e2843a28c09fcb98b2375dbfca7
    image: ghcr.io/llm-d/llm-d-inference-scheduler:0.0.3
    imageID: ghcr.io/llm-d/llm-d-inference-scheduler@sha256:359b2e4c572878f9b2089782ee09b576c2b45e680869cebaf7a627756c07f139
    lastState: {}
    name: epp
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2025-07-02T18:07:36Z"
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-mzjw5
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 10.89.0.2
  hostIPs:
  - ip: 10.89.0.2
  phase: Running
  podIP: 10.244.0.139
  podIPs:
  - ip: 10.244.0.139
  qosClass: BestEffort
  startTime: "2025-07-02T18:07:35Z"

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    meta.helm.sh/release-name: original
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-07-02T18:07:35Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: llm-d-modelservice-0.0.5
  name: original-llm-d-modelservice-http-route
  namespace: default
  resourceVersion: "686103"
  uid: 0ab52af6-6f49-4c64-93c1-955acd10ff68
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: llm-d-inference-gateway
  rules:
  - backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: original-llm-d-modelservice-inference-pool
      port: 8000
      weight: 1
    matches:
    - headers:
      - name: x-model-name
        type: Exact
        value: random2
      path:
        type: PathPrefix
        value: /
status:
  parents:
  - conditions:
    - lastTransitionTime: "2025-07-02T18:07:35Z"
      message: Route was valid
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-02T18:07:35Z"
      message: All references resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: istio.io/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: llm-d-inference-gateway
